# packages/types/src/api/auth/tmp-password/post.ts
@@ -1,0 +1,4 @@
+import { paths } from "../../../api";
+
+export type PostAuthByTmpPasswordResponse =
+	paths["/auth/tmp-password"]["post"]["responses"]["200"]["content"]["application/json"];
